--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="DKMHBid - The Best Online Auction Site !">
     <meta name="author" content="DKMHGroup">
-
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/sweet-alert.css">
+    <link rel="stylesheet" type="text/css" href="css/sweetalert.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
-
     <!-- SCRIPTS -->
     <!-- Libraries -->
     <script type="text/javascript" src="libs/jquery-2.1.4.min.js"></script>
@@ -20,9 +17,9 @@
     <script type="text/javascript" src="libs/angular.min.js"></script>
     <script type="text/javascript" src="libs/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/angularfire.min.js"></script>
-    <script type="text/javascript" src="libs/bootstrap.min.js"></script>
-    <script type="text/javascript" src="libs/sweet-alert.min.js"></script>
+    <script type="text/javascript" src="libs/sweetalert.min.js"></script>
     <!-- Custom scripts -->
+    <script type="text/javascript" src="js/dom.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
@@ -31,87 +28,49 @@
 </head>
 
 <body ng-controller="DKMHAppController">
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <section class="header">
+        <div class="container header-inner">
+            <img class="logo" src="images/logo.png">
+            <img class="title" src="images/title.png">
+            <ul class="custom-nav">
+                <li><a href="#" class="director">TOP CHARTS</a></li>
+                <li><a href="#" class="director">SOLD</a></li>
+                <li><a href="#" class="director">EXPLORE</a></li>
+            </ul>
+        </div>
+    </section>
+    <section class="body">
+        <div class="body-inner">
+            <div ng-show="successMsg" class="col-md-8 col-md-offset-2 alert alert-success" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <strong>Success! </strong> {{successMsg}}
+            </div>
+            <div ng-show="errorMsg" class="col-md-8 col-md-offset-2 alert alert-danger" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <strong>Error! </strong> {{errorMsg}}
+            </div>
+            <div class="ng-view">
+            </div>
+        </div>
+    </section>
+    <section class="footer">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">DKMHBid</a>
+            <ul class="links">
+                <li>
+                    <a href="#" class="button"><img src="images/icon-g+.png"></a>
+                </li>
+                <li>
+                    <a href="#" class="button"><img src="images/icon-tweeter.png"></a>
+                </li>
+                <li>
+                    <a href="#" class="button"><img src="images/icon-facebook.png"></a>
+                </li>
+            </ul>
+            <div class="copyright">
+                COPYRIGHT &copy; DKMH 2015
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul ng-hide="!currentUser" class="nav navbar-nav navbar-left">
-                    <li>
-                        <a href="/my-items">My Items</a>
-                    </li>
-                    <li>
-                        <a href="/history">Auction History</a>
-                    </li>
-                    <li>
-                        <a href="/deposit">Deposit</a>
-                    </li>
-                </ul>
-
-                <ul ng-if="!currentUser" class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/sign-in">Sign In</a>
-                    </li>
-                    <li>
-                        <a href="/register">Register</a>
-                    </li>
-                </ul>
-
-                <ul ng-if="currentUser" class="nav navbar-nav navbar-right">
-                    <li>
-                        <a>Signed in as {{currentUser.email}}</a>
-                    </li>
-                    <li>
-                        <a>Balance: {{currentUser.balance}}$</a>
-                    </li>
-                    <li>
-                        <a style="cursor: pointer" ng-click="doSignOut()">Sign Out</a>
-                    </li>
-                </ul>
-
-            </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
-    </nav>
-    <!-- Page Content -->
-    <div class="container">
-        <div ng-show="successMsg" class="col-md-8 col-md-offset-2 alert alert-success" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <strong>Success! </strong> {{successMsg}}
-        </div>
-        <div ng-show="errorMsg" class="col-md-8 col-md-offset-2 alert alert-danger" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <strong>Error! </strong> {{errorMsg}}
-        </div>
-        <div class="ng-view">
-            <!--TODO views go here-->
-        </div>
-    </div>
-    <!-- /.container -->
-    <div class="container">
-        <hr>
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; 2015 - DKMH Group </p>
-                </div>
-            </div>
-        </footer>
-    </div>
-    <!-- /.container -->
-
+    </section>
 </body>
 
 </html>
