--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="DKMHGroup">
     <!-- STYLESHEETS -->
     <link rel="stylesheet" type="text/css" href="css/sweetalert.css">
+    <link rel="stylesheet" type="text/css" href="css/loading.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <!-- SCRIPTS -->
     <!-- Libraries -->
