add countdown timer

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <!-- Libraries -->
     <script type="text/javascript" src="libs/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="libs/moment.min.js"></script>
+    <script type="text/javascript" src="libs/humanize-duration.js"></script>
     <script type="text/javascript" src="libs/firebase.js"></script>
     <script type="text/javascript" src="libs/angular.min.js"></script>
     <script type="text/javascript" src="libs/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/angularfire.min.js"></script>
+    <script type="text/javascript" src="libs/angular-timer.min.js"></script>
     <script type="text/javascript" src="libs/sweetalert.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript" src="js/dom.js"></script>
