add new item for bidding

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div ng-if="currentUser">
                     <p>Welcome, <b>{{currentUser.email}}</b>!</p>
                     Your Balance: <b>${{currentUser.balance}}<b>
-                    <a href="/my-items">Items</a>
+                    <a href="/new-item">Items</a>
                     <a href="/top-up">Top-up</a>
                     <a href="#" ng-click="doSignOut()">Sign Out</a>
                 </div>
