--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 </div>
                 <div ng-if="currentUser">
                     <p>Welcome, <b>{{currentUser.email}}</b>!</p>
-                    Your Balance: <b>${{currentUser.balance}}<b>
-                    <a href="/new-item">Items</a>
-                    <a href="/top-up">Top-up</a>
+                    Your Balance: <b>${{currentUser.balance}}<b> <br>
+                    <a href="/new-item">Add Item</a>
+                    <a href="/top-up">Top Up</a>
                     <a href="#" ng-click="doSignOut()">Sign Out</a>
                 </div>
             </div>
