--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </div>
             <ul class="custom-nav">
                 <li><a href="/" class="director">ACTIVE BIDS</a></li>
-                <li><a href="/test" class="director">SOLD</a></li>
-                <li><a href="#" class="director">EXPLORE</a></li>
+                <li><a href="/test" class="director">EXPIRED BIDS</a></li>
+                <li ng-if="currentUser"><a href="#" class="director">MY ITEMS</a></li>
             </ul>
         </div>
     </section>
