--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script type="text/javascript" src="libs/angular-timer.min.js"></script>
     <script type="text/javascript" src="libs/angular_filepicker.min.js"></script>
     <script type="text/javascript" src="libs/sweetalert.min.js"></script>
+    <script type="text/javascript" src="libs/jquery.jcarousellite.js"></script>
+    <script type="text/javascript" src="libs/jquery.mousewheel.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript" src="js/dom.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
