--- a/index.html
+++ b/index.html
@@ -64,13 +64,21 @@
     </section>
     <section class="body">
         <div class="body-inner">
-            <div ng-show="successMsg">
-                <strong>Success! </strong> {{successMsg}}
-            </div>
-            <div ng-show="errorMsg">
-                <strong>Error! </strong> {{errorMsg}}
-            </div>
             <div class="ng-view">
+            </div>
+            <div class="loading-container" ng-if="loadingMessage">
+                <div class="cssload-loader">
+                    <div class="cssload-side"></div>
+                    <div class="cssload-side"></div>
+                    <div class="cssload-side"></div>
+                    <div class="cssload-side"></div>
+                    <div class="cssload-side"></div>
+                    <div class="cssload-side"></div>
+                    <div class="cssload-side"></div>
+                    <div class="cssload-side"></div>
+                </div>
+                <br>
+                <h3>{{loadingMessage}}</h3>
             </div>
         </div>
     </section>
