Separate to 'active-items' & 'expired-items' collections; Add 'My Items' page

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             </div>
             <ul class="custom-nav">
                 <li><a href="/" class="director">ACTIVE BIDS</a></li>
-                <li><a href="/test" class="director">EXPIRED BIDS</a></li>
-                <li ng-if="currentUser"><a href="#" class="director">MY ITEMS</a></li>
+                <li><a href="/expired-bids" class="director">EXPIRED BIDS</a></li>
+                <li ng-if="currentUser"><a href="/my-items" class="director">MY ITEMS</a></li>
             </ul>
         </div>
     </section>
