--- a/index.html
+++ b/index.html
@@ -41,18 +41,22 @@
             <img class="title" src="images/title.png">
             <div class="user-panel">
                 <div ng-if="!currentUser">
-                    <h4>Not signed-in!</h4>
-                    <ul style="list-style: none">
-                        <li><a href="/sign-in">Sign In</a></li>
-                        <li><a href="/sign-up">Sign Up</a></li>
+                    <h4 class="usename">Not signed-in!</h4>
+                    <ul class="button-list">
+                        <li><a href="/sign-in" class="button sign-button" id="signin-btn">Sign In</a></li>
+                        <li><a href="/sign-up" class="button sign-button" id="signup-btn">Sign Up</a></li>
                     </ul>
                 </div>
                 <div ng-if="currentUser">
-                    <p>Welcome, <b>{{currentUser.email}}</b>!</p>
-                    Your Balance: <b>${{currentUser.balance}}</b> <br>
-                    <a href="/new-item">Add Item</a>
-                    <a href="/top-up">Top Up</a>
-                    <a href="#" ng-click="doSignOut()">Sign Out</a>
+                    <p class="usename">Welcome, <b>{{currentUser.email}}</b>!</p>
+                    <p class="usename" id="balance" style="border-top: 1px solid #fff">Your Balance: <b>${{currentUser.balance}}</b></p>
+                    <table class="table-btn" cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td><a href="/new-item" class="button option-btn">Add Item</a></td>
+                            <td><a href="/top-up" class="button option-btn">Top Up</a></td>
+                            <td><a href="#" ng-click="doSignOut()" class="button option-btn">Sign Out</a></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <ul class="custom-nav">
