fix white bar, inc scrolling speed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </ul>
         </div>
     </section>
-    <section class="body">
+    <section class="body" style="">
         <div class="body-inner">
             <div class="ng-view">
             </div>
